--- a/button.css
+++ b/button.css
@@ -1,1 +1,22 @@
-
+<style>
+body {
+    font-family: sans-serif;
+}
+p {
+    font-size: 20px;
+}
+.btn:hover {
+    background-color: black;;
+}
+.btn {
+    width:60px;
+    background-color: mediumblue;
+    color:white;
+    font-size:20px;
+    padding: 5px;
+    border-radius: 3px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
+</style>
